update detailed-design
